--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Julyus Andreas CV</title>
+    <title>Julyus Andreas</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a class="active" href="#home">Beranda</a></li>
+                <li><a href="#news">Profil</a></li>
+                <li><a href="#contact">Biodata</a></li>
+                <li><a href="#about">Moto</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
