--- a/index.html
+++ b/index.html
@@ -5,23 +5,149 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Curriculum Vitae of Julyus Andreas">
+    <meta name="keywords" content="Julyus Andreas">
+    <meta name="author" content="Julyus Andreas">
     <title>Julyus Andreas</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
+    <!-- Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a class="active" href="#home">Beranda</a></li>
-                <li><a href="#news">Profil</a></li>
-                <li><a href="#contact">Biodata</a></li>
-                <li><a href="#about">Moto</a></li>
-            </ul>
-        </nav>
-    </header>
+    <ul class="nav">
+        <li><a href="#profile"><i style="font-size:24px" class="fa">&#xf2be;</i><br>Profil</a></li>
+        <li><a href="#biodata"><i style="font-size:24px" class="fa">&#xf2bb;</i><br>Biodata</a></li>
+        <li><a href="#motohidup"><i style="font-size:24px" class="fa">&#xf10d;</i><br>Motto</a></li>
+    </ul>
+    <section id="profile" class="text-center">
+        <figure>
+            <img src="profile2.jpg" class="profile-picture" alt="Julyus Andreas" height="350px">
+        </figure>
+        <h1 class="display-1 profile-name">Julyus Andreas</h1>
+        <h2 class="display-3 section-name">Profile Singkat</h2>
+        <div class="under-line"></div>
+        <blockquote>
+            Merupakan mahasiswa yang sedang menempuh jurusan <strong>Teknik Informatika</strong> yang sangat
+            menyukai
+            dunia teknologi. Memiliki ketertarikan yang tinggi dalam bidang Web Development <br> Selain mengikuti
+            kegiatan di kuliah, Saya menyibukkan diri dengan mengikuti kelas online
+            untuk melatih skill seperti HTML5, CSS3, dan Javascript ES6 untuk menunjang kebutuhan di Industri 4.0
+        </blockquote>
+    </section>
+    <section id="biodata">
+        <h2 class="display-3 section-name text-center">Biodata</h2>
+        <div class="under-line"></div>
+        <div class="biodata-card">
+            <table>
+                <tbody>
+                    <tr>
+                        <td class="border-right"><i class="material-icons" style="font-size:24px">contacts</i></td>
+                        <td class="text-bold caption-hide">Nama</td>
+                        <td>Julyus Andreas Binoto</td>
+                    </tr>
+                    <tr>
+                        <td class="border-right"><i style="font-size:24px" class="fa">&#xf274;</i></td>
+                        <td class="text-bold caption-hide">Tempat, Tanggal Lahir </td>
+                        <td>Jakarta, 1 Juli 2000</td>
+                    </tr>
+                    <tr>
+                        <td class="border-right"><i class="material-icons" style="font-size:24px">place</i></td>
+                        <td class="text-bold caption-hide">Alamat </td>
+                        <td>Jalan Prapanca 1 No.4, Jawa Barat</td>
+                    </tr>
+                    <tr>
+                        <td class="border-right"><i class="material-icons" style="font-size:24px">school</i></td>
+                        <td class="text-bold caption-hide">Universitas </td>
+                        <td>Universitas Katolik Parahyangan</td>
+                    </tr>
+                    <tr>
+                        <td class="border-right"><i class="material-icons" style="font-size:24px">laptop_mac</i></td>
+                        <td class="text-bold caption-hide">Jurusan </td>
+                        <td>Teknik Informatika</td>
+                    </tr>
+                    <tr>
+                        <td class="border-right"><i class="material-icons" style="font-size:24px">email</i></td>
+                        <td class="text-bold caption-hide">Email </td>
+                        <td>andreasjulyus@gmail.com</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+    <section id="motohidup">
+        <h2 class="text-center display-2 section-name">Motto Hidup</h2>
+        <div class="under-line"></div>
+        <div class="cards text-center">
+            <article>
+                <header>
+                    <h2>1</h2>
+                </header>
+
+                <div class="content">
+                    <p>Berpikirlah <i>out of the box</i> agar bisa menyelesaikan berbagai permasalahan dengan cara yang
+                        tidak biasa
+                    </p>
+                </div>
+
+            </article>
+
+            <article>
+                <header>
+                    <h2>2</h2>
+                </header>
+                <div class="content">
+                    <p>Berbuat baik kepada sesama bukan untuk menerima balasan, tetapi karena kita telah mendapatkan hal
+                        baik dari orang disekitar kita</p>
+                </div>
+            </article>
+
+            <article>
+                <header>
+                    <h2>3</h2>
+                </header>
+
+                <div class="content">
+                    <p>Semua impian kita akan menjadi kenyataan bila kita memiliki keberanian yang cukup untuk terus
+                        maju dan pantang menyerah.</p>
+                </div>
+
+            </article>
+    </section>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="grid-container">
+                <div class="grid-item inner-grid-container">
+                    <div class="grid-item"><a href="#">Temui saya di: </a></div>
+                    <div class="grid-item"><a href="https://www.instagram.com/julyusandreas/"><i class="fa fa-instagram"
+                                style="font-size:24px"></i><br>Instagram</a></div>
+                    <div class="grid-item"><a href="https://twitter.com/julyusandreas"><i class="fa fa-twitter-square"
+                                style="font-size:24px"></i>
+                            <br>Twitter
+                        </a></div>
+                    <div class="grid-item"><a href="https://www.youtube.com/julyusandreas"><i class="fa fa-youtube-play"
+                                style="font-size:24px"></i><br>Youtube</a></div>
+                </div>
+            </div>
+            <hr>
+            <p class="text-bold">Dibuat dengan ❤ oleh Julyus Andreas</p>
+
+        </div>
+    </footer>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </body>
 
 </html>
