membuang file yang tidak perlu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </ul>
     <section id="profile" class="text-center">
         <figure>
-            <img src="profile2.jpg" class="profile-picture" alt="Julyus Andreas" height="350px">
+            <img src="profile.jpg" class="profile-picture" alt="Julyus Andreas" height="350px">
         </figure>
         <h1 class="display-1 profile-name">Julyus Andreas</h1>
         <h2 class="display-3 section-name">Profile Singkat</h2>
