adding favicon and description meta

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Curriculum Vitae of Julyus Andreas">
-    <meta name="keywords" content="Julyus Andreas">
+    <meta name="description"
+        content="Merupakan halaman website yang menampilkan Curriculum Vitae singkat dari Julyus Andreas">
+    <meta name="keywords" content="Curriculum Vitae dari Julyus Andreas">
     <meta name="author" content="Julyus Andreas">
     <title>Julyus Andreas</title>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
