--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     seperti HTML5, CSS3, dan Javascript ES6 untuk menunjang kebutuhan di Industri 4.0">
     <meta name="keywords" content="Curriculum Vitae singkat dari Julyus Andreas">
     <meta name="author" content="Julyus Andreas">
-    <title>Julyus Andreas</title>
+    <title>Curriculum Vitae Of Julyus Andreas</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
